examples/test/testpolicy1584.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1584
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key45: value47
      key40: value13
      key44: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value34
          key31: value24
      podSelector:
        matchLabels:
          key11: value15
